--- a/style.css
+++ b/style.css
@@ -1,147 +1,52 @@
-*
-{
-  color: #fff;
-  font-size: 28px;
-  font-weight: 300;
-  box-sizing: border-box;
-  font-family: 'Metrophobic', Arial, serif; font-weight: 400;
+*{
+margin:0px;
+padding:0px;
+
 }
 
-body
-{
-  background-color: #323232;
-  padding: 50px;
-  margin: 0;
-  padding: 0;
+nav{
+border-top:3px solid tomato;
+background:#4f4f4f;
+text-align:center;
+width:100%;
+
+}
+nav ul{
+list-type:none;
+
 }
 
-header,
-section,
-aside,
-footer
-{
-  text-align: center;
-  background-color: #666666;
-  border-radius: 5px;
-  padding: 50px;
-}
-nav {
-  text-align: left;
-  background-color: #e74c3c;
-  border-radius: 5px;
-  padding: 50px;
-}
+nav li {
+display:inline-block;
 
-header,
-nav,
-footer
-{
-  width: 100%;
-  padding: 50px;
 }
+nav li a {
+display:block;
+padding:15px 20px;
+font:15px tahoma,arial;
+color:#fff;
+text-decoration:none;
 
-header
-{
-  margin-bottom: 50px;
 }
-
-h1
-{
-  margin: 0;
-}
-
-nav,
-aside
-{
-  width: 25%;
-}
-
-section
-{
-  float: left;
-  width: calc(50% - 100px);
-  margin: 0 50px 50px 50px;
-}
-
-section header,
-section article,
-section footer
-{
-  width: 100%;
-  background-color: #999999;
-  border-radius: 5px;
-  margin: 0;
-  padding: 50px;
-}
-
-section article
-{
-  margin: 25px 0;
-}
-
-nav
-{
-  float: left;
-}
-
-aside
-{
-  float: right;
-}
+nav li a:hover {
+background:tomato;
+transition-duration:0.5s;
+-webkit-transition-duration:0.5s;
 
 
+}
+nav li ul {
+text-align:left;
+display:none;
+position:absolute;
+background:#8a8a8a;
+width:170px;
+}
 
+nav li:hover ul {
+display:block;
+}
+nav li ul li {
+display:block;
 
-footer
-{
-  clear: both;
-}
-.mainmenubtn {
-  background-color: red;
-  color: white;
-  border: none;
-  cursor: pointer;
-  padding:20px;
-  margin-top:20px;
-}
-.mainmenubtn1 {
-  background-color: red;
-  color: white;
-  border: none;
-  cursor: pointer;
-  padding:20px;
-  margin-top:20px;
-}
-.mainmenubtn:hover {
-  background-color: blue;
-}
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-.dropdown-child {
-  display: none;
-  background-color: black;
-  min-width: 200px;
-}
-.dropdown-child a {
-  color: white;
-  padding: 20px;
-  text-decoration: none;
-  display: block;
-}
-.dropdown:hover .dropdown-child {
-  display: block;
-}
-#leftsidebar {
-  position:fixed;
-  width:200px;
-  height:100%
-  background-color:#e71c3c;
-}
-#leftSidebar ul li
-{
-  list-style: none;
-  padding:10px 10px;
-  border-bottom:1px solid rgba(255,255,0.4);
 }
