--- a/style.css
+++ b/style.css
@@ -50,26 +50,40 @@ nav li ul li {
 display:block;
 
 }
+nav li ul li:hover
+{
+display:inline;
+}
 banner {
 	margin-top:0px;
-	margin-left:0px;
-	margin-right:0px;
+	margin-left:auto;
+	margin-right:auto;
+        width:%100;
+        height:300px;
 }
+
 .banneresim
 {
-	width:1900px;
-	height:300px;
-	
+height:300px;
 }
 #anasayfayazi
 {
-	width:1700px;
+	width:%100;
 	margin-left:100px;
 	margin-right:100px;
 	margin-bottom:50px;
+       
+        
 }
+
 .solakaydir
 {
 	float:left;
 	margin:0 10px 10px 0;
+}
+footer
+{
+margin-bottom:0px;
+text-align:center;
+
 }
