--- a/style.css
+++ b/style.css
@@ -58,16 +58,17 @@ banner {
 	margin-top:0px;
 	margin-left:auto;
 	margin-right:auto;
-        width:%100;
         height:300px;
 }
 
 .banneresim
 {
 height:300px;
+width:1348px;;
 }
 #anasayfayazi
 {
+	margin-top:10px;
 	width:%100;
 	margin-left:100px;
 	margin-right:100px;
@@ -86,4 +87,15 @@ footer
 margin-bottom:0px;
 text-align:center;
 
+}
+#hakkimizda
+{
+margin-right:20px;
+margin-left:20px;
+text-align:center;
+}
+#anadiv
+{
+width:%100;
+align:center;
 }
